# quick_maths

./: .gitignore  Cargo.toml  readme.md
src/: .gitignore  autodiff.rs  lib.rs  map.rs  masked.rs  mat.rs  mueller.rs  num.rs  optimizers.rs  quat.rs  quickcheck.rs  ray.rs  remat.rs  revec.rs  serde.rs  stokes.rs  tensor.rs  transform.rs  vec.rs
src/dynamics/: array.rs  mod.rs  tensor.rs
