[package]
name = "quick_maths"
documentation = "https://docs.rs/quick_maths/"
version = "0.1.7"
authors = ["julianknodt <julianknodt@gmail.com>"]
edition = "2018"
readme = "readme.md"
license = "MIT"
description = "Simple low-dimensional linear algebra structures."
keywords = ["math", "graphics", "vector", "matrix"]
repository = "https://github.com/JulianKnodt/quick_maths"
homepage = "https://github.com/JulianKnodt/quick_maths"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default_f64 = []

[dependencies]
num = "0.2.0"
cfg-if = "0.1.10"
serde = { version = "1.0.113", features = ["derive"], optional=true }
quickcheck = { version = "0.9.2", optional=true }

[profile.release]
lto = true
